--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -3,5 +3,7 @@
 }
 
 <h1>Welcome to the To Do List!</h1>
-<h3><a href='/categories'>View categories</a></h3>
-<h3><a href='/categories/new'>Add a new category</a></h3>
+@* of 3 args first is text, second is target action in the controller and 3rd param is optional it specifies the
+controller *@
+@* we want to route to *@
+<p>@Html.ActionLink("See all Items", "Index", "Items")</p>
