--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -12,6 +12,11 @@
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
     <input type="submit" value="Add new item" />
+
+    @Html.LabelFor(model => model.Category)
+    @Html.DropDownList("CategoryId")
+
+  <input type="submit" value="Add new item" class="btn btn-default" />
 }
 
 
